<resources>
    <string name="app_name">Rutgers Cafe</string>
    <string name="caramel">Caramel</string>
    <string name="cream">Cream</string>
    <string name="store_orders">Store Orders</string>
    <string name="click_to_delete_order">Click to Delete Order</string>
    <string name="image">image</string>
    <string name="order_coffee">order coffee</string>
    <string name="order_donut">order donut</string>
    <string name="basket">basket</string>
    <string name="textview">TextView</string>
    <string name="add_to_order">Add To Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="refresh_order">Refresh Order</string>
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
    <string name="place_order">Place Order</string>
    <string name="syrup">Syrup</string>
    <string name="milk">Milk</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="add_to_order1">Add to Order</string>
</resources>