<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".donutQuantityActivity">

    <ImageView
            android:layout_width="215dp"
            android:layout_height="216dp" app:srcCompat="@drawable/reward_doughnut" android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="35dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="78dp" android:layout_marginEnd="79dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toTopOf="@+id/flavorSelected" android:contentDescription="@string/order_donut"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="132dp"
            android:layout_height="46dp" android:id="@+id/flavorSelected"
            android:layout_marginTop="72dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="66dp" app:layout_constraintEnd_toStartOf="@+id/quantity"
            android:layout_marginEnd="50dp"
    />
    <Spinner
            android:layout_width="93dp"
            android:layout_height="44dp" android:id="@+id/quantity"
            android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginStart="50dp" app:layout_constraintStart_toEndOf="@+id/flavorSelected"
            android:layout_marginEnd="70dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/add_to_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addToOrderButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="43dp" android:layout_marginEnd="274dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="152dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="38dp" app:layout_constraintTop_toBottomOf="@+id/subTotalOutput"
            android:onClick="addToOrder"/>
    <TextView
            android:text="@string/subtotal"
            android:layout_width="130dp"
            android:layout_height="43dp" android:id="@+id/subTotalOutput"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/flavorSelected" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="43dp" android:layout_marginEnd="238dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="39dp"
            app:layout_constraintBottom_toTopOf="@+id/addToOrderButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>