<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageButton
            android:layout_width="195dp"
            android:layout_height="201dp" app:srcCompat="@drawable/cup_of_coffee_528814833"
            android:id="@+id/orderCoffeeButton"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/orderDonutButton" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck" android:onClick="clickOrderCoffeeButton"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="181dp"
            android:layout_marginBottom="69dp" app:layout_constraintBottom_toTopOf="@+id/basketButton"
            android:contentDescription="@string/order_coffee"/>
    <ImageButton
            android:layout_width="188dp"
            android:layout_height="202dp" app:srcCompat="@drawable/reward_doughnut"
            android:id="@+id/orderDonutButton"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="154dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/orderCoffeeButton" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="328dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.553"
            android:onClick="clickOrderDonutButton" android:contentDescription="@string/order_donut"/>
    <ImageButton
            android:layout_width="162dp"
            android:layout_height="172dp" app:srcCompat="@drawable/istockphoto_1206806317_170667a"
            android:id="@+id/basketButton"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitCenter" android:layout_marginTop="69dp"
            app:layout_constraintTop_toBottomOf="@+id/orderCoffeeButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="26dp" app:layout_constraintEnd_toStartOf="@+id/storeOrderButton"
            android:layout_marginEnd="14dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="108dp" android:onClick="clickBasketButton" android:contentDescription="@string/basket"/>
    <ImageButton
            android:layout_width="200dp"
            android:layout_height="180dp" app:srcCompat="@drawable/rsz_contextualised_lists"
            android:id="@+id/storeOrderButton"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitCenter" android:layout_marginTop="61dp"
            app:layout_constraintTop_toBottomOf="@+id/orderDonutButton" android:layout_marginStart="14dp"
            app:layout_constraintStart_toEndOf="@+id/basketButton" android:layout_marginEnd="9dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="108dp" android:onClick="clickStoreOrderButton"
            android:contentDescription="@string/store_orders"/>

</androidx.constraintlayout.widget.ConstraintLayout>