<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".orderCoffeeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="407dp"
            android:layout_height="176dp"
            android:id="@+id/constraintLayout" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/constraintLayout2">

        <CheckBox
                android:text="@string/cream"
                android:layout_width="84dp"
                android:layout_height="54dp" android:id="@+id/cream"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp" app:layout_constraintEnd_toStartOf="@+id/caramel"
                android:layout_marginEnd="23dp" android:layout_marginBottom="9dp"
                app:layout_constraintBottom_toTopOf="@+id/caramel" android:onClick="updateOutput"/>
        <CheckBox
                android:text="@string/syrup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/syrup"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="13dp"
                app:layout_constraintTop_toBottomOf="@+id/cream" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintEnd_toStartOf="@+id/caramel"
                android:layout_marginEnd="23dp" android:onClick="updateOutput"/>
        <CheckBox
                android:text="@string/milk"
                android:layout_width="82dp"
                android:layout_height="55dp" android:id="@+id/milk"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@+id/caramel"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="9dp"
                app:layout_constraintBottom_toTopOf="@+id/caramel" android:onClick="updateOutput"/>
        <CheckBox
                android:text="@string/whipped_cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/whipped"
                app:layout_constraintStart_toEndOf="@+id/caramel" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/milk"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="17dp" android:onClick="updateOutput"/>
        <CheckBox
                android:text="@string/caramel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/caramel"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="77dp" android:layout_marginStart="57dp"
                app:layout_constraintStart_toEndOf="@+id/syrup" app:layout_constraintEnd_toStartOf="@+id/whipped"
                android:layout_marginEnd="33dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="65dp" android:onClick="updateOutput"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="402dp"
            android:layout_height="415dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="1dp"
            android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            android:layout_marginEnd="1dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.428" app:layout_constraintVertical_bias="1.0"
            android:id="@+id/constraintLayout2">
        <ListView
                android:choiceMode="singleChoice"
                android:listSelector="#666666"
                android:layout_width="166dp"
                android:layout_height="364dp"
                android:id="@+id/size" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="213dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintVertical_bias="0.181"/>
        <ListView
                android:choiceMode="singleChoice"
                android:listSelector="#666666"
                android:layout_width="165dp"
                android:layout_height="333dp" android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/quantity"
                app:layout_constraintVertical_bias="0.07" app:layout_constraintHorizontal_bias="0.786"
                app:layout_constraintStart_toEndOf="@+id/size" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/submit"/>
        <Button
                android:text="@string/add_to_order1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/submit"
                android:layout_marginEnd="27dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="230dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
                app:layout_constraintTop_toTopOf="parent" android:onClick="toOrder"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>